# nocturned

./: .gitignore  AGENTS.md  Cargo.toml  Cross.toml  Justfile  LICENSE  README.md  bluetooth.go  flake.nix  go.mod  go.sum  gomod2nix.toml  main.go
.github/workflows/: build.yml  release.yml
bluetooth/: agent.go  constants.go  manager.go  types.go
ota/: ota.go
src/: AGENTS.md  ab.rs  audio.rs  bluetooth.rs  bluetooth_agent.rs  brightness.rs  config.rs  error.rs  iap2_wrapper.rs  image_cache.rs  main.rs  mfi.rs  mfi_impl.rs  wakeword.rs  webapp_server.rs  websocket.rs
src/app/: hid_mapping.rs  mod.rs  msgpack.rs  websocket_handler.rs
utils/: device.go  downloader.go  ota.go  timezone.go  types.go  websocket.go
ws/: websocket.go
