[package]
name = "nocturned"
version = "2.0.5"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
bluer = { version = "0.17", features = ["rfcomm", "bluetoothd"] }
iap2-rs = { git = "https://github.com/usenocturne/iap2-rs.git" }
bytes = "1.8"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
rmpv = "1.3"
hex = "0.4"
base64 = "0.22"
uuid = "1.11"
futures = "0.3"
libc = "0.2"
dbus = "0.9"
dbus-crossroads = "0.5.2"
tokio-tungstenite = "0.24"
tungstenite = "0.24"
async-trait = "0.1"
crc32fast = "1.5.0"
md5 = "0.7"
opus = "0.3"
tract-ndarray = { package = "ndarray", version = "0.16.1" }
tract-onnx = "0.21"
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }
